# src/routes/api.route.ts
@@ -3,7 +3,6 @@ import { authController } from "../controllers/auth.controller.js";
 import { validate } from "../middlewares/validate.middleware.js";
 import { createUserSchema, loginUserSchema } from "../validations/user.schema.js";
 import authMiddleware from "../middlewares/auth.middleware.js";
-import swaggerUi from "swagger-ui-express";
 
 const router = express.Router();
 
@@ -12,5 +11,7 @@ router.post('/auth/register', validate({body: createUserSchema}), authController
 router.post('/auth/login', validate({body: loginUserSchema}), authController.login);
 
 router.get('/auth/me', authMiddleware, authController.me);
+
+router.post('/auth/activation', authController.activation);
 
 export default router;
